--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,23 @@
 .read-the-docs {
   color: #888;
 }
+
+::selection {
+  background-color: rgb(138, 72, 155);
+  color: white;
+}
+
+.cursor {
+  display: inline-block;
+  color: transparent;
+  animation: cursor-blink 0.7s step-end infinite;
+  font-style: normal;
+  border-right: 8px solid rgb(196, 86, 174);
+  margin-left: -2rem;
+}
+
+@keyframes cursor-blink {
+  50% {
+    opacity: 0;
+  }
+}
