--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gotu&display=swap');
@@ -6,6 +7,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Erica+One&display=swap');
+
+
+
+
 
 :root {
   --font-display: 'Barrio', cursive;
@@ -16,6 +23,9 @@
   --font-accent: 'Sansita', serif;
   --font-mono: 'Xanh Mono', monospace;
   --font-light: 'Outfit', sans-serif;
+  --font-sigmar: 'Sigmar', cursive;
+  --font-erica: 'Erica One', cursive;
+  --font-playfair: 'Playfair Display', serif;
 
   line-height: 1.5;
   font-weight: 400;
