--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
 body {
   min-width: 320px;
   min-height: 100vh;
-  background-color: #ffffff;
+  background-color: #481b1b;
   color: #1a1a1a;
   font-family: var(--font-body);
 }
@@ -121,7 +121,6 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
